--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/clerk-sdk-node": "^5.1.6",
     "@clerk/nextjs": "^6.11.1",
     "@prisma/client": "^6.3.1",
     "@radix-ui/react-label": "^2.1.2",
