--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
     "prisma": "^6.3.1",
+    "shadcn-ui": "^0.9.4",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3"
