--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@clerk/clerk-sdk-node": "^5.1.6",
     "@clerk/nextjs": "^6.11.1",
     "@prisma/client": "^6.3.1",
+    "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
@@ -36,7 +38,6 @@
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
     "prisma": "^6.3.1",
-    "shadcn-ui": "^0.9.4",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3"
